--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DDNAEINV</string>
+    <string name="app_description">Asset and Equipment Inventory Application</string>
+    <string name="province">Province of Davao del Norte</string>
+    <string name="department">Provincial Economic Enterprise Development Office</string>
 </resources>
